--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "css-loader": "^6.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1"
   }
 }
