New changes, old CRA setup is unsupported

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "babel-plugin-file-loader": "^2.0.0",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "style-loader": "^3.3.1"
   }
 }
