--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "start": "webpack-dev-server .",
     "build": "webpack ."
   },
-  "keywords": ["Reactjs", "Webpack", "Babeljs", "file-loader", "web", "pets"],
+  "keywords": [
+    "Reactjs",
+    "Webpack",
+    "Babeljs",
+    "file-loader",
+    "web",
+    "pets"
+  ],
   "author": "Darius Rain",
   "license": "ISC",
   "devDependencies": {
@@ -22,6 +29,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "babel-plugin-file-loader": "^2.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
